# poc-alpha

./: LICENSE  README.md  pyproject.toml  test.py
sample/: having.yml  三段論法.yml  帰納推論.yml
src/deduct_alpha/: __init__.py
src/deduct_alpha/model/: __init__.py
src/deduct_ja/: __main__.py  loader.py  model.py  parser.py
