[project]
name = "deduct-alpha"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/deduct_alpha"]

[tool.uv]
dev-dependencies = [
    "mecab-python3>=1.0.9",
    "pyyaml>=6.0.2",
]
